--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
     <link rel="stylesheet" type="text.css" href="./assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/images">
+    <script src="./assets/javascript/game.js"></script>
+
 
     <title>Psychic Game</title>
 
 </head>
 
 <body>
-    <h1>The Psychic Game</h1>
+    <header>
+        <div class="header">
+            <h1>The Psychic Game</h1>
+        </div>
+    </header>
+
+
+
+
+
+
+    </script>
+
 
 
 </body>
