--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" type="text.css" href="./assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/images">
-    <script src="./assets/javascript/game.js"></script>
 
 
     <title>Psychic Game</title>
@@ -23,6 +22,10 @@
         </div>
     </header>
 
+    <div class="container">
+
+    </div>
+
 
 
 
@@ -30,7 +33,8 @@
 
     </script>
 
-
+    <!--game.js-->
+    <script src="./assets/javascript/game.js"></script>
 
 </body>
 
