--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" type="text.css" href="./assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
     <link rel="stylesheet" href="./assets/images">
 
 
@@ -16,13 +20,17 @@
 </head>
 
 <body>
-    <header>
-        <div class="header">
-            <h1>The Psychic Game</h1>
-        </div>
-    </header>
+    <div class="container-fluid">
+        <nav class="navbar navbar-light bg-light">
+            <span class="navbar-text">
+                <h1>THE PSYCHIC GAME</h1>
+            </span>
+        </nav>
 
-    <div class="container">
+        <div class="container">
+            <h3>Guess what letter I'm thinking of</h3>
+
+        </div>
 
     </div>
 
@@ -31,7 +39,8 @@
 
 
 
-    </script>
+
+
 
     <!--game.js-->
     <script src="./assets/javascript/game.js"></script>
