--- a/index.html
+++ b/index.html
@@ -28,16 +28,50 @@
         </nav>
 
         <div class="container">
-            <h3>Guess what letter I'm thinking of</h3>
+            <div class="row">
+                <div class="col">
+                    <h2>Guess what letter I'm thinking of...</h2>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="row">
+                <div class="col">
+                    <h2>Wins: </h2>
+                </div>
+
+            </div>
+
+            <br>
+
+            <div class="row">
+                <div class="col">
+                    <h2>Losses: </h2>
+                </div>
+
+            </div>
+
+            <br>
+
+            <div class="row">
+                <div class="col">
+                    <h2>Guesses Left: </h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <h2>Your guesses so far: <span id="user-text"><strong>...Nothing.</strong></span></h2>
+
+                </div>
+            </div>
+
+
 
         </div>
 
     </div>
-
-
-
-
-
 
 
 
