--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 
 <body>
+
+
     <div class="container-fluid">
         <nav class="navbar navbar-light bg-light">
             <span class="navbar-text">
@@ -56,14 +58,13 @@
 
             <div class="row">
                 <div class="col">
-                    <h2>Guesses Left: </h2>
+                    <h2>Guesses Left: 9</h2>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col">
                     <h2>Your guesses so far: <span id="user-text"><strong>...Nothing.</strong></span></h2>
-
                 </div>
             </div>
 
