--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"> -->
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h2>Guess what letter I'm thinking of...</h2>
+                    <h3>Guess what letter I'm thinking of...<span id="comp"></span></h3>
                 </div>
             </div>
 
@@ -40,16 +40,7 @@
 
             <div class="row">
                 <div class="col">
-                    <h2>Wins: </h2>
-                </div>
-
-            </div>
-
-            <br>
-
-            <div class="row">
-                <div class="col">
-                    <h2>Losses: </h2>
+                    <h3>Wins: <span id="wins"></span></h3>
                 </div>
 
             </div>
@@ -58,13 +49,24 @@
 
             <div class="row">
                 <div class="col">
-                    <h2>Guesses Left: 9</h2>
+                    <h3>Losses: <span id="losses"></span></h3>
                 </div>
+
             </div>
+
+            <br>
 
             <div class="row">
                 <div class="col">
-                    <h2>Your guesses so far: <span id="user-text"><strong>...Nothing.</strong></span></h2>
+                    <h3>Guesses Left: <span id="guesses-left"></h3>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="row">
+                <div class="col playerGuess">
+                    <h3>Your guesses so far: <span id="user-text"></span></h3>
                 </div>
             </div>
 
@@ -78,7 +80,7 @@
 
 
     <!--game.js-->
-    <script src="./assets/javascript/game.js"></script>
+    <script type="text/javascript" src="game-test.js"></script>
 
 </body>
 
