revised js filepath link

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
     <!--game.js-->
-    <script type="text/javascript" src="game-test.js"></script>
+    <script type="text/javascript" src="./assets/javascript/game.js"></script>
 
 </body>
 
