--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="row">
                 <div class="col">
                     <h3>Guess what letter I'm thinking of...<span id="comp"></span></h3>
+                    <h4>*Inputs must be lowercase*</h4>
                 </div>
             </div>
 
