--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <div class="container-fluid">
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar">
             <span class="navbar-text">
                 <h1>THE PSYCHIC GAME</h1>
             </span>
